Use sharp package to decode images to raw pixels
Use sharp for decoding common image formats, so that we don't have to
do it ourselves. Removed image-size package because sharp provides the
dimension info to us, but we also have an in-house version for PNG.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "repository": "git@github.com:RickyC0626/qoi.js.git",
   "author": "Ricky Chon <rickychon99@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
   "dependencies": {
-    "image-size": "^1.0.1"
+    "sharp": "^0.30.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.5.1",
+    "jest": "^28.1.0"
   }
 }
