--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qoi.js",
   "version": "1.0.0",
-  "description": "JavaScript implementation of QOI",
+  "description": "QOI codec written in JavaScript",
   "main": "index.js",
   "repository": "git@github.com:RickyC0626/qoi.js.git",
   "author": "Ricky Chon <rickychon99@gmail.com>",
@@ -16,5 +16,10 @@
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "jest": "^28.1.0"
-  }
+  },
+  "files": [
+    "src",
+    "tests",
+    "tools"
+  ]
 }
