--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rickyc0626/qoi.js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "QOI codec written in JavaScript",
   "main": "index.js",
   "repository": "git@github.com:RickyC0626/qoi.js.git",
@@ -18,8 +18,16 @@
     "jest": "^28.1.0"
   },
   "files": [
-    "src",
-    "tests",
-    "tools"
+    "src"
+  ],
+  "keywords": [
+    "qoi",
+    "image-compression",
+    "image",
+    "compression",
+    "codec",
+    "encoder",
+    "decoder",
+    "javascript"
   ]
 }
