--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,7 @@ name: Publish Package
 on:
   release:
     types: [released]
+  workflow_dispatch:
 
 jobs:
   release:
@@ -13,12 +14,16 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: yarn
 
-      - name: Clean install package
-        run: npm ci
+      - name: Setup yarn
+        run: npm install -g yarn
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
       - name: Run tests
-        run: npm test
+        run: yarn test
 
       - name: Set package registry
         run: npm config set registry https://npm.pkg.github.com
