--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm config set registry https://npm.pkg.github.com
 
       - name: GitHub Packages registry authentication
-        run: npm set //npm.pkg.github.com/:_authToken ${{ secrets.GITHUB_TOKEN }}
+        run: npm set //npm.pkg.github.com/:_authToken ${{ secrets.GPR_TOKEN }}
 
       - name: NPM registry authentication
         run: npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
