Add workflow for package publishing to GPR

--- a/.github/workflows/publish-gpr.yml
+++ b/.github/workflows/publish-gpr.yml
@@ -1,4 +1,4 @@
-name: Publish to NPM Registry
+name: Publish to GitHub Package Registry
 
 on:
   release:
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: 'https://npm.pkg.github.com'
           scope: '@rickyc0626'
 
       - name: Setup yarn
@@ -29,4 +29,4 @@ jobs:
       - name: Publish package to registry
         run: yarn publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
