--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "QOI codec written in JavaScript",
   "main": "index.js",
   "repository": "git@github.com:RickyC0626/qoi.js.git",
+  "homepage": "https://github.com/RickyC0626/qoi.js#readme",
   "author": "Ricky Chon <rickychon99@gmail.com>",
   "license": "MIT",
   "scripts": {
