Test edge case for matching pixels util function
Should return false if either pixel is undefined

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:dev": "jest --watch"
   },
   "dependencies": {
     "sharp": "^0.30.4"
