--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 /node_modules
 /out
+
+# Yarn zero-installs
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
